--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -2,27 +2,24 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master", "main" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master", "main" ]
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🔄 Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: ☕ Set up JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
 
-      - name: 🧱 Build with Maven
+      - name: Build User-Service
+        working-directory: ./User-Service   # 👈 Path to your pom.xml
         run: mvn clean package -DskipTests
-
-      - name: 🧪 Run Tests
-        run: mvn test
