--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -21,5 +21,5 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        working-directory: ./HotelService   # 👈 Folder that contains your pom.xml
+        working-directory: ./HotelService   
         run: mvn clean package -DskipTests
